Add toolchains tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,20 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-project ("repros")
+if(REPRO_TEST_TOOLCHAIN)
+    message(STATUS "Before project")
+    message(STATUS "    CMAKE_CXX_FLAGS_INIT = ${CMAKE_CXX_FLAGS_INIT}")
+    message(STATUS "    CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
 
-if(ANDROID)
-    add_library(repromain SHARED "main.cpp")
-else()
-    add_executable(repromain "main.cpp")
+    project("repro")
+
+    message(STATUS "After project")
+    message(STATUS "    CMAKE_CXX_FLAGS_INIT = ${CMAKE_CXX_FLAGS_INIT}")
+    message(STATUS "    CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
+    return()
 endif()
 
+project("repro")
+add_library(main SHARED "main.cpp")
+
 find_package(Boost COMPONENTS filesystem REQUIRED)
-target_link_libraries(repromain PUBLIC Boost::filesystem)
+target_link_libraries(main PUBLIC Boost::filesystem)
