Set output name of both wrapper and implementation to 'repro'

--- a/repro_implementation_lib/CMakeLists.txt
+++ b/repro_implementation_lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.4.1)
 
 add_library(repro-implementation implementation.cpp implementation.h)
-# set_target_properties(repro-implementation PROPERTIES OUTPUT_NAME repro)
+set_target_properties(repro-implementation PROPERTIES OUTPUT_NAME repro)
 target_include_directories(repro-implementation PUBLIC .)
 
